--- a/Au.html
+++ b/Au.html
@@ -15,7 +15,7 @@
 
 
 </head>
-<body style="background-color:#FFDF00;">
+<body style="background-color:#FFB000;">
 
 <div class="periodic">
     <TT style="color:black;font-size:25px;">Altın(Au)</TT>
