--- a/Au.html
+++ b/Au.html
@@ -17,7 +17,7 @@
 </head>
 <body style="background-color:#FFB000;">
 
-<div class="periodic">
+<div class="periodic" id="content">
     <TT style="color:black;font-size:25px;">Altın(Au)</TT>
     <br><br>
     <img src="img/Au.png" alt="Au(Altın)">
@@ -46,7 +46,7 @@
         Bilgisayarlarda, uzay araçlarında, elektronik cihazlarda ve uçak motorlarında kullanılır.</TT>
     <TT style="color:black;font-size:20px;">Nano ölçekteki altın parçacıkları endüstride katalizör (kimyasal tepkimelerin daha hızlı gerçekleşmesini sağlayan ancak kendisi tepkimede harcanmayan maddeler) olarak kullanılır.</TT>
   </div>
-  <p id="content">This text will be read aloud.</p>
+
 
   <script>
       // Function to speak the content
