--- a/Au.html
+++ b/Au.html
@@ -17,8 +17,8 @@
 </head>
 <body style="background-color:#FFB000;">
 
-<div class="periodic">
-    <TT style="color:black;font-size:25px;" id="content">Altın(Au)</TT>
+<div class="periodic" id="content">
+    <TT style="color:black;font-size:25px;">Altın(Au)</TT>
     <br><br>
     <img src="img/Au.png" alt="Au(Altın)">
     <br><br>
