--- a/Au.html
+++ b/Au.html
@@ -77,5 +77,9 @@
 
     window.onload = speakText;
 </script>
+
+    <button onclick="speakText()">Click to Start</button>
+<p id="content" style="display: none;">Bu metin seslendirilecek.</p>
+
 </body>
 </html>
