--- a/Au.html
+++ b/Au.html
@@ -13,6 +13,10 @@
     }
     </style>
 
+.custom-button {
+    width: 150px;
+    height: 50px;
+}
 
 </head>
 <body style="background-color:#FFB000;">
@@ -78,8 +82,7 @@
     window.onload = speakText;
 </script>
 
-    <button onclick="speakText()">Click to Start</button>
-<p id="content" style="display: none;">Bu metin seslendirilecek.</p>
+   <center><button onclick="speakText()">Dinlemek için bas</button></center>
 
 </body>
 </html>
