--- a/Au.html
+++ b/Au.html
@@ -12,12 +12,6 @@
       text-align: left;
     }
     </style>
-
-.custom-button {
-    width: 150px;
-    height: 50px;
-}
-
 </head>
 <body style="background-color:#FFB000;">
 
@@ -82,7 +76,7 @@
     window.onload = speakText;
 </script>
 
-   <center><button onclick="speakText()">Dinlemek için bas</button></center>
+   <center><button style="width: 150px; height: 50px;" onclick="speakText()">Dinlemek için bas</button></center>
 
 </body>
 </html>
