--- a/Au.html
+++ b/Au.html
@@ -46,6 +46,7 @@
   </div>
 
 
+  
   <script>
     function speakText() {
         const content = document.getElementById('content').textContent;
@@ -53,13 +54,7 @@
 
         speech.text = content;
         speech.lang = 'tr-TR'; // Turkish (Turkey)
-
-        // Adjust the speech rate dynamically based on text length
-        if (content.length < 2) {
-            speech.rate = 1.0; // Faster rate for short text
-        } else {
-            speech.rate = 0.9; // Slower rate for longer text
-        }
+        speech.rate = 0.8; // Adjust rate as needed
 
         // Fetch available voices
         let voices = window.speechSynthesis.getVoices();
@@ -72,8 +67,6 @@
 
         window.speechSynthesis.speak(speech);
     }
-
-    window.onload = speakText;
 </script>
 
    <center><button style="width: 150px; height: 50px;" onclick="speakText()">Dinlemek için bas</button></center>
