--- a/Au.html
+++ b/Au.html
@@ -76,7 +76,7 @@
     window.onload = speakText;
 </script>
 
-   <center><button  onclick="speakText()">Dinlemek için bas</button></center>
+   <center><button style="height: 50px; width: 150px;" onclick="speakText()">Dinlemek için bas</button></center>
 
 </body>
 </html>
