--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-  <iframe src="Au.html" frameborder="200">Altın</iframe>  
+  <iframe src="Au.html" height="500" width="500">Altın</iframe>  
 <a href="Au.html">Altın</a>
 
 </body>
