--- a/Ne.html
+++ b/Ne.html
@@ -18,10 +18,9 @@
 <div class="periodic" id="content">
     <TT style="color:black;font-size:25px;">Altın(Au)</TT>
     <br><br>
-    <img src="img/Neon.png" alt="Au(Altın)">
+    <img src="img/Neon.png" alt="Ne(Neon)">
     <br><br>
     <TT style="color:black;font-size:20px;">Altın, periyodik tablonun 6. periyodunun 11. grubunda yer alan bir elementtir. Altının atom numarası 79'dur. Altın, Au sembolü ile gösterilir ve metaldir.</TT>
-    <br><br>
     <TT style="color:black;font-size:30px;">Altının Tarihçesi ve Kullanım Alanları </TT>
     <br>
     <TT style="color:black;font-size:30px;">Altının simgesi (Au) Latincede “altın” anlamına gelen aurum kelimesine dayanır.</TT>
