--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
 </head>
 <body>
-  <iframe src="Au.html" height="2000" width="500">Altın</iframe>  
+  <iframe src="Au.html" height="2000" width="500">Altın</iframe> 
+  <iframe src="Ne.html" height="2000" width="500">Neon</iframe>   
 <a href="Au.html">Altın</a>
 
 </body>
