--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 </head>
 <body>
   <iframe src="Au.html" height="2000" width="500">Altın</iframe> 
-  <iframe src="Ne.html" height="2000" width="500">Neon</iframe>   
+  <iframe src="Ne.html" height="2000" width="500">N</iframe>   
 <a href="Au.html">Altın</a>
+<a href="Ne.html">Neon</a>
 
 </body>
 </html>
