--- a/Ne.html
+++ b/Ne.html
@@ -16,15 +16,15 @@
 <body style="background-color:#272423;">
 
 <div class="periodic" id="content">
-    <TT style="color:black;font-size:25px;">Neon(Ne)</TT>
+    <TT style="color:white;font-size:25px;">Neon(Ne)</TT>
     <br><br>
     <img src="img/Neon.png" alt="Ne(Neon)">
     <br><br>
-    <TT style="color:black;font-size:20px;">Neon, periyodik tablonun 2. periyodunun 18. grubunda yer alan bir elementtir. Neonun atom numarası 10'dur. Neon, Ne sembolü ile gösterilir ve soy gazdır.</TT>
-    <TT style="color:black;font-size:30px;">Neonun Tarihçesi ve Kullanım Alanları </TT>
+    <TT style="color:white;font-size:20px;">Neon, periyodik tablonun 2. periyodunun 18. grubunda yer alan bir elementtir. Neonun atom numarası 10'dur. Neon, Ne sembolü ile gösterilir ve soy gazdır.</TT>
+    <TT style="color:white;font-size:30px;">Neonun Tarihçesi ve Kullanım Alanları </TT>
     <br>
     <br>
-    <TT style="color:black;font-size:30px;">Adını Yunancada “yeni” anlamına gelen neos kelimesinden alır. 1898’de Sir William Ramsay ve Morris Travers tarafından keşfedildi.
+    <TT style="color::white;font-size:30px;">Adını Yunancada “yeni” anlamına gelen neos kelimesinden alır. 1898’de Sir William Ramsay ve Morris Travers tarafından keşfedildi.
 
         Doğada atmosferde ve kayaçların içinde hapsolmuş şekilde bulunur. Kararlı bir bileşiği yoktur.
         
