--- a/Ne.html
+++ b/Ne.html
@@ -24,7 +24,7 @@
     <TT style="color:white;font-size:30px;">Neonun Tarihçesi ve Kullanım Alanları </TT>
     <br>
     <br>
-    <TT style="color::white;font-size:30px;">Adını Yunancada “yeni” anlamına gelen neos kelimesinden alır. 1898’de Sir William Ramsay ve Morris Travers tarafından keşfedildi.
+    <TT style="color:white;font-size:30px;">Adını Yunancada “yeni” anlamına gelen neos kelimesinden alır. 1898’de Sir William Ramsay ve Morris Travers tarafından keşfedildi.
 
         Doğada atmosferde ve kayaçların içinde hapsolmuş şekilde bulunur. Kararlı bir bileşiği yoktur.
         
