--- a/Ne.html
+++ b/Ne.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Altın|Periyodik Tablo</title>
+<title>Neon|Periyodik Tablo</title>
 <style>
     div.periodic {
       text-align: center;
