--- a/Ne.html
+++ b/Ne.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Paragraf Okuma</title>
+    <title>Otomatik Okuma</title>
 </head>
 <body>
 
-    <button onclick="okumaFonksiyonu()">Paragrafı Oku</button>
-    <p id="okumaParagrafi" style="display:none;">Bu paragraf anında okunuyor!</p>
+    <p id="otomatikParagraf">Bu paragraf otomatik olarak görüntüleniyor!</p>
 
     <script src="script.js"></script>
 </body>
